fix: fixing text wrapping in file name and removing file list horizontal scrolling

--- a/www/css/new-ui/pages/_transfer.css
+++ b/www/css/new-ui/pages/_transfer.css
@@ -123,7 +123,8 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .fs-transfer__files table {
@@ -198,6 +199,10 @@
 .fs-transfer__files table tr td div span:first-child {
   flex: 1;
   margin-right: var(--fs-spacing-3x);
+}
+
+.fs-transfer__files table tr td div span.filename {
+  word-break: break-word;
 }
 
 .fs-transfer__files table td div .progressbar {
